bug cofirm